fixed bug with scrollbar and padding in footer & main content | changed colour of site

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,29 +2,50 @@ body {
     font-family: "Montserrat";
     font-weight: 700;
     padding-top: 70px;
-    background-color: blueviolet;
+    overflow-x: hidden;
 }
 
-/* #footer {
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: rgb(80, 66, 66);
-    color: white;
-    text-align: center;
-} */
+/* Colours */
 
-.row {
-    background-color: grey;
+.main-colour {
+    background-color: #8d7865;
 }
 
-#MainSection {
+ /* Main Structure */
+
+ #main {
     align-items: center;
     justify-content: center;
     flex-direction: column;
     margin-top: 40px;
     height: 100vh;
     width: 100vw;
-    background-color: rgb(247, 244, 245);
+    background-color: rgb(201, 72, 115);
     text-align: center;
 }
+
+#footer {
+    color:white;
+    text-align:center;
+}
+
+/* Header Elements */
+
+/* Main Elements */
+    
+    /* Home Page */
+
+    /* About Me Page */
+
+    /* Projects */
+
+    /* Contact */
+
+/* Footer */
+
+/* Misc */
+
+.help {
+    background-color: black;
+    color: beige;
+ }
